Revision History
=================

-------------------------------------------------------------------------------
dcm4che 1.0.1 -  - Changes since dcm4che 1.0.0
-------------------------------------------------------------------------------
dcmrcv Sample Application:
+ change default File ID scheme in dcmrcv demo application
  from StudyDate,SeriesNumber,InstanceNumber
  to StudyDate,StudyID,SeriesNumber,InstanceNumber
+ change(generalize) commandline syntax for replacing attribute values in
  received objects to --set=TAG:VAL.
dcmsnd Sample Application:
+ change(generalize) commandline syntax for replacing attribute values in
  transmitted objects to --set=TAG:VAL.
+ add --poll-dir option (may be used for as DICOM router - in combination with
  dcmrcv --dest DIR).
new syslog Sample Application:
+ to send/generate syslog messages
new mppssnd Sample Application:
+ to send MPPS messages to remote DICOM node
new Image I/O compatible DICOM ImageWriter (contributed by Dr. Hacklaender)
+ org.dcm4che.imageio.plugins.DcmImageWriteParam
+ org.dcm4cheri.imageio.plugins.DcmImageWriteParamImpl
+ org.dcm4cheri.imageio.plugins.DcmImageWriter
+ org.dcm4cheri.imageio.plugins.DcmImageWriterSpi
Bug Fixes:
+ org.dcm4cheri.data.DicomObjectImpl#putAll - did not insert any element