@@ -26,7 +26,7 @@
   <!-- Module name(s) & version -->
   <property name="module.name" value="dcm4che"/>
   <property name="module.Name" value="Dcm4che"/>
-  <property name="module.version" value="1.0.0"/>
+  <property name="module.version" value="1.0.1"/>
 
 
   <!-- ================================================================== -->
